# protos

./: .env.example  .gitignore  Makefile  README.md  calibrate.sh  install.sh
apps/runtime/: pyproject.toml
apps/runtime/src/runtime/: audio_processor.py  barge_in.py  history.py  llm.py  main.py  stt.py  tts.py
apps/runtime/tests/: test_history.py
instructions/: system.xml
lib/: common.sh  kokoro.sh  os.sh
libs/kokoro/: pyproject.toml
libs/kokoro/src/kokoro/: engine.py
libs/kokoro/tests/: test_kokoro.py
openspec/changes/issue-00.1-voice-loop-natural/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/issue-00.1-voice-loop-natural/specs/issue-00.1-voice-loop-natural/: spec.md
scripts/lib/: common.sh  kokoro.sh  pkg.sh
src/kokoro/: __init__.py  engine.py
tests/: conftest.py  test_kokoro.py
