[project]
name = "protos-runtime"
version = "0.2.0"
description = "Protos voice runtime: STT (Whisper tiny) + WebRTC AEC/NS/AGC/VAD + LLM (Gemini) + TTS (Kokoro)"
requires-python = ">=3.11"
dependencies = [
    "protos-kokoro",
    "sounddevice>=0.5",
    "faster-whisper>=1.1",
    "google-genai>=1.0",
    "pywebrtc-audio>=0.1",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
