[project]
name = "protos-kokoro"
version = "0.1.0"
description = "Kokoro TTS wrapper for Protos voice runtime"
requires-python = ">=3.10"
dependencies = [
    "kokoro-onnx>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
